some styles finished

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
         <div class="main" id="main">
             <div class="mainText">
-                <h1>Care With Best Centrall Care</h1>
+                <h1>ATAB'S Health Center</h1>
                 <p>Our team of experts provides top-notch medical treatment with empathy using the most advanced technology.</p>
-                <button>Learn More</button>
+                <button>AI Symptom Checker</button>
             </div>
         </div>
     </div>
